--- a/views/register.html
+++ b/views/register.html
@@ -26,7 +26,7 @@
                ng-show="myform.email.$invalid && myform.email.$touched">
                 Must be a valid email</p>
 
-            <input type="password" name="password" placeholder="Password"
+            <input type="password" name="password" placeholder="Password" ng-minlength="6"
                    ng-model="user.password" ng-required="true">
             <p class="error validationerror"
                ng-show="myform.password.$invalid && myform.password.$touched">
